knowengress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: knowengress
  namespace: default
spec:
  tls:
  - hosts:
    - dev.knoweng.org
    secretName: knowssl-secret
  rules:
  - host: dev.knoweng.org
    http:
      paths:
      - backend:
          serviceName: support-nginx-ingress-default-backend
          servicePort: 80
        path: /
